Update colors used in sims to match UI spec
[#163472792]

--- a/src/components/spaces/populations/populations-container.sass
+++ b/src/components/spaces/populations/populations-container.sass
@@ -8,7 +8,7 @@
   width: 100%
   position: absolute
   bottom: 0px
-  background-color: $color-dark-gold
+  background-color: $color-simdata-amber
   border-style: solid
   border-color: white
   border-width: 2px 0 0 0
@@ -22,7 +22,7 @@
   .population-checkbox
     height: 20px
     width: 20px
-    background: $color-khaki-yellow-light2
+    background: $color-simdata-amber-light2
 
   .population-button
     display: flex
@@ -37,14 +37,14 @@
     border-radius: $component-border-radius
     font-size: $font-size-label1
     font-family: $font-stack
-    color: $color-khaki-yellow-dark5
-    background-color: $color-khaki-yellow-light2
+    color: $color-simdata-amber-dark2
+    background-color: $color-simdata-amber-light2
     cursor: pointer
     transition-duration: $fade-time
 
     &.sticky
       color: $color-white
-      background-color: $color-khaki-yellow-dark4
+      background-color: $color-simdata-amber-dark1
 
     &.sticky-alt
       color: $color-white
@@ -57,7 +57,7 @@
     .icon
       width: 44px
       height: 28px
-      fill: $color-khaki-yellow-dark2
+      fill: $color-simdata-amber
 
       &.sticky
         fill: $color-white
@@ -73,25 +73,25 @@
 
   /* hover and mousedown states */
   .population-button:hover
-    background-color: $color-khaki-yellow
+    background-color: $color-simdata-amber-light1
 
   .population-button:active
     color: $color-white
-    background-color: $color-khaki-yellow-dark4
+    background-color: $color-simdata-amber-dark1
 
   .population-button:active .icon
     fill: $color-white
 
   /* hover and mousedown states of brown sticky button */
   .population-button.sticky:hover
-    background-color: $color-khaki-yellow
+    background-color: $color-simdata-amber-light1
 
   .population-button.sticky:active
-    color: $color-khaki-yellow-dark5
-    background-color: $color-khaki-yellow-light2
+    color: $color-simdata-amber-dark2
+    background-color: $color-simdata-amber-light2
 
   .population-button:active .icon.sticky
-    fill: $color-khaki-yellow-dark2
+    fill: $color-simdata-amber
 
 
   /* hover and mousedown states of blue sticky button */
@@ -146,25 +146,25 @@
   height: 20px
   width: 20px
   border-radius: $component-border-radius
-  background-color: $color-khaki-yellow-light2
+  background-color: $color-simdata-amber-light2
 
 /* On mouse-over, add a background color */
 .check-container:hover input ~ .checkmark
-  background-color: $color-khaki-yellow
+  background-color: $color-simdata-amber-light1
 
 /* On mouse-down, add a background color */
 .check-container:active input ~ .checkmark
-  background-color: $color-khaki-yellow-dark4
+  background-color: $color-simdata-amber-dark1
 
 /* checkbox is checked */
 .check-container input:checked ~ .checkmark
-  background-color: $color-khaki-yellow-dark4
+  background-color: $color-simdata-amber-dark1
 
 .check-container:hover input:checked ~ .checkmark
-  background-color: $color-khaki-yellow
+  background-color: $color-simdata-amber-light1
 
 .check-container:active input:checked ~ .checkmark
-  background-color: $color-khaki-yellow-light2
+  background-color: $color-simdata-amber-light2
 
 /* Create the checkmark/indicator (hidden when not checked) */
 .checkmark:after
@@ -198,7 +198,7 @@
     display: flex
     align-items: center
     font-size: $font-size-label1
-    color: $color-khaki-yellow-dark5
+    color: $color-simdata-amber-dark2
 
 .circle
   height: 6px
@@ -219,7 +219,7 @@
 .environment-box
   height: 22px
   width: 38px
-  border: 2px solid $color-khaki-yellow-dark2
+  border: 2px solid $color-simdata-amber
   border-radius: 3px
   color: $color-black
   background-color: $color-white
