--- a/src/components/spaces/organisms/organisms-container.sass
+++ b/src/components/spaces/organisms/organisms-container.sass
@@ -24,7 +24,7 @@
     display: flex
     flex-direction: row
     width: 100%
-    background-color: $color-salmon-orange-dark2
+    background-color: $color-simdata-carrot
     border-style: solid
     border-color: white
     border-width: 2px 0 0 0
@@ -45,8 +45,8 @@
     border-radius: $component-border-radius
     font-size: $font-size-label1
     font-family: $font-stack
-    color: $color-salmon-orange-dark5
-    background-color: $color-salmon-orange-light2
+    color: $color-simdata-carrot-dark2
+    background-color: $color-simdata-carrot-light2
     cursor: pointer
 
     &.zoom-in
@@ -78,7 +78,7 @@
       margin: 0px
       width: 44px
       height: 28px
-      fill: $color-salmon-orange-dark2
+      fill: $color-simdata-carrot
 
       &.active
         fill: $color-white
@@ -88,11 +88,11 @@
 
   /* hover and mousedown states */
   .organism-button:hover
-    background-color: $color-salmon-orange
+    background-color: $color-simdata-carrot-light1
 
   .organism-button:active
     color: $color-white
-    background-color: $color-salmon-orange-dark4
+    background-color: $color-simdata-carrot-dark1
 
   .organism-button:active .icon
     fill: $color-white
