--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -27,10 +27,10 @@
     margin-bottom: 2px
 
     &.populations
-      background-color: $color-khaki-yellow-dark2
+      background-color: $color-simdata-amber
 
     &.organism
-      background-color: $color-salmon-orange-dark2
+      background-color: $color-simdata-carrot
 
     .title
       flex-grow: 1
@@ -51,7 +51,7 @@
       .button
         height: $two-up-button-icon-height
         width: $two-up-button-icon-width
-        fill: $color-khaki-yellow
+        fill: $color-simdata-amber-light1
       &.active
         .button
           fill: $two-up-button-icon-color-active
@@ -66,14 +66,12 @@
     &.organism
       .button-holder
         &:hover:not(.disabled)
-          background-color: $color-salmon-orange-dark4
+          background-color: $color-simdata-carrot-dark1
         .button
-          fill: $color-salmon-orange-dark1
+          fill: $color-simdata-carrot-light1
         &.active
           .button
             fill: $two-up-button-icon-color-active
-
-
 
   .content
     flex-grow: 1
@@ -81,10 +79,10 @@
     position: relative
 
     &.populations
-      background-color: $color-khaki-yellow-light2
+      background-color: $color-simdata-amber-light2
 
     &.organism
-      background-color: $color-salmon-orange-light2
+      background-color: $color-simdata-carrot-light2
 
   .resizetofit
     display: flex
@@ -99,10 +97,10 @@
     border-bottom-right-radius: $component-border-radius
 
     &.populations
-      background-color: $color-khaki-yellow-dark2
+      background-color: $color-simdata-amber
 
     &.organism
-      background-color: $color-salmon-orange-dark2
+      background-color: $color-simdata-carrot
 
 .left-abutment
   margin-left: $two-up-margin
