--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -56,7 +56,7 @@
         background-color: $two-up-button-background
       .button
         height: $two-up-button-icon-height
-        width: $two-up-button-icon-width
+        width: $two-up-button-icon-width - 30
         fill: $color-simdata-amber-light1
       &.active
         .button
@@ -109,12 +109,13 @@
       background-color: $color-simdata-carrot
 
     .button-holder
-      width: 140px
+      width: 120px
+      margin: 0 2px
       border-radius: 13px
       background-color: $color-simdata-amber-light2
-      &:hover:not(.disabled)
+      &:hover:not(.disabled):not(.active)
         background-color: $color-simdata-amber-light1
-      &:active:not(.disabled)
+      &:active:not(.disabled), &.active
         background-color: $color-simdata-amber-dark1
         color: $color-white
 
