--- a/src/components/spaces/proteins/info-box.sass
+++ b/src/components/spaces/proteins/info-box.sass
@@ -1,23 +1,11 @@
 .info-and-options
 	.info-box
 		position: absolute
-		background: #88b7d5
+		background: #88b7d5aa
 		border: 4px solid #c2e1f5
-		padding: 6px
+		padding: 5px 0
 		z-index: 2
 		top: -10px
-		// left: 50%
-		// transform: translate(-50%, 0)
-		&:after
-			border-color: rgba(136, 183, 213, 0)
-			border-bottom-color: #88b7d5
-			border-width: 30px
-			margin-left: -30px
-		&:before
-			border-color: rgba(194, 225, 245, 0)
-			border-bottom-color: #c2e1f5
-			border-width: 36px
-			margin-left: -36px
 
 	.info-box:after, .info-box:before
 		bottom: 100%
@@ -38,7 +26,6 @@
 		flex-direction: column
 		align-items: center
 		padding: 5px
-		margin-bottom: 10px
 		& > div
 			padding: 5px
 		p
