--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -120,6 +120,12 @@ $color-simdata-eggplant-light1: #cd88e4
 $color-simdata-eggplant-light2: #ecc4f9
 $color-simdata-eggplant-light3: #f9e6ff
 
+$color-data-mousebrown-light-rep: #dfc39d
+$color-data-mousebrown-medium-rep: #bf8f53
+$color-data-mousebrown-dark-rep: #5d3515
+$color-data-hormone: #00cc99
+$color-data-signalprotein: #29abe2
+
 $component-bgcolor: $color-white
 $main-content-bgcolor: $color-nav-cinder-light2
 $main-content-color: $color-nav-cinder-dark3
