--- a/src/components/collect-button.sass
+++ b/src/components/collect-button.sass
@@ -15,8 +15,8 @@
     display: flex
     justify-content: center
     align-items: center
-    top: 0px
-    left: 80px
+    top: -2px
+    left: 78px
     padding: 2px
     color: $color-white
     font-family: $font-stack
@@ -37,11 +37,11 @@
 
   .index
     position: absolute
-    top: 3px
-    left: 3px
+    top: 0px
+    left: 0px
     padding: 1px
     font-family: $font-stack
-    font-size: $font-size-header
+    font-size: 13px
     font-weight: bold
     color: $color-nav-cerulean-dark2
 
@@ -117,3 +117,32 @@
   .collect-button-outline:hover:not(.uncollected)
     background-color: $color-white
     cursor: pointer
+
+.four-up-row
+  .collect-button-holder
+    position: absolute
+    z-index: 999
+.four-up-row.top-row
+  .x-close
+    left: 98px
+    top: 8px
+  .index
+    left: 17px
+    top: 11px
+    color: $color-white
+  .collect-button-outline
+    position: relative
+    top: 3px
+    left: 18px
+.four-up-row.bottom-row
+  .x-close
+    left: 98px
+    top: 3px
+  .index
+    left: 17px
+    top: 6px
+    color: $color-white
+  .collect-button-outline
+    position: relative
+    top: -2px
+    left: 18px
