--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -214,7 +214,7 @@ $explore-button-dna-active-color: $color-white
 //
 // collect buttons
 //
-$collect-button-holder-width: 100px
+$collect-button-holder-width: 98px
 $collect-button-holder-height: $collect-button-holder-width
 $collect-button-width: 82px
 $collect-button-height: $collect-button-width
@@ -225,7 +225,7 @@ $collect-button-inner-border-width: $collect-button-width - 10px
 $collect-button-inner-border-height: $collect-button-inner-border-width
 $collect-button-inner-border-radius: 50%
 $collect-button-border-width: 3px
-$collect-button-icon-height: 45px
+$collect-button-icon-height: 40px
 
 //
 // two-up display
@@ -355,3 +355,6 @@ $font-3-color: #242424
 $font-4-color: #595402
 $font-5-color: #622E02
 $font-6-color: #021860
+
+.fullwidth
+  width: 100%
