--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -216,16 +216,17 @@ $explore-button-dna-active-color: $color-white
 //
 $collect-button-holder-width: 98px
 $collect-button-holder-height: $collect-button-holder-width
-$collect-button-width: 82px
+$collect-button-width: 81px
 $collect-button-height: $collect-button-width
 $collect-button-radius: 50%
-$collect-button-outline-width: $collect-button-width + 16px
+$collect-button-outline-width: $collect-button-width + 14px
 $collect-button-outline-height: $collect-button-outline-width
 $collect-button-inner-border-width: $collect-button-width - 10px
 $collect-button-inner-border-height: $collect-button-inner-border-width
 $collect-button-inner-border-radius: 50%
 $collect-button-border-width: 3px
 $collect-button-icon-height: 40px
+$collect-button-icon-width: 60px
 
 //
 // two-up display
