--- a/src/components/spaces/organisms/organelle-wrapper.sass
+++ b/src/components/spaces/organisms/organelle-wrapper.sass
@@ -9,6 +9,8 @@
 
   &.dropper
     cursor: url("../../../assets/cell-zoom/dropper.png") 6 28, auto
+  &.inspect
+    cursor: url('../../../assets/inspect-cursor-protein.png') 6 5, auto
 
 .hover-location
     position: absolute
