Add organism level cursors
[#163965874]

--- a/src/components/spaces/organisms/organelle-wrapper.sass
+++ b/src/components/spaces/organisms/organelle-wrapper.sass
@@ -6,11 +6,33 @@
   margin-left: auto
   margin-right: auto
 
-
-  &.dropper
-    cursor: url("../../../assets/cell-zoom/dropper.png") 6 28, auto
+  &.add
+    cursor: url('../../../assets/cell-zoom/add-substance-generic-cursor.png') 9 41, auto
+  &.add-eumelanin
+    cursor: url('../../../assets/cell-zoom/add-eumelanin-cursor.png') 9 41, auto
+  &.add-hormone
+    cursor: url('../../../assets/cell-zoom/add-hormone-cursor.png') 9 41, auto
+  &.add-pheomelanin
+    cursor: url('../../../assets/cell-zoom/add-pheomelanin-cursor.png') 9 41, auto
+  &.add-signalProtein
+    cursor: url('../../../assets/cell-zoom/add-signalProtein-cursor.png') 9 41, auto
+  &.assay
+    cursor: url('../../../assets/cell-zoom/measure-substance-cursor.png') 9 41, auto
   &.inspect
-    cursor: url('../../../assets/inspect-cursor-protein.png') 6 5, auto
+    cursor: url('../../../assets/cell-zoom/inspect-proteins-cursor.png') 6 5, auto
+
+  &.add-eumelanin-disabled
+    cursor: url('../../../assets/cell-zoom/add-eumelanin-disabled-cursor.png') 9 41, auto
+  &.add-hormone-disabled
+    cursor: url('../../../assets/cell-zoom/add-hormone-disabled-cursor.png') 9 41, auto
+  &.add-pheomelanin-disabled
+    cursor: url('../../../assets/cell-zoom/add-pheomelanin-disabled-cursor.png') 9 41, auto
+  &.add-signalProtein-disabled
+    cursor: url('../../../assets/cell-zoom/add-signalProtein-disabled-cursor.png') 9 41, auto
+  &.assay-disabled
+    cursor: url('../../../assets/cell-zoom/measure-substance-disabled-cursor.png') 9 41, auto
+  &.inspect-disabled
+    cursor: url('../../../assets/cell-zoom/inspect-proteins-disabled-cursor.png') 6 5, auto
 
 .hover-location
     position: absolute
