Match organelle label spec for opacity
[#162740204]

--- a/src/components/spaces/organisms/organelle-wrapper.sass
+++ b/src/components/spaces/organisms/organelle-wrapper.sass
@@ -41,7 +41,7 @@
     min-width: 94px
     height: 23px
     color: #fff
-    background: $color-simdata-carrot
+    background: rgba($color-simdata-carrot, .85)
     border: 1px solid #444
     padding: 2px 6px
     text-align: center
