Darken active-hover button very slightly
When one button is active, and the other two are disabled, it's hard to
tell that the other two are disabled because none have disabled states.

[#163743063]

--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -118,6 +118,8 @@
       &:active:not(.disabled), &.active
         background-color: $color-simdata-amber-dark1
         color: $color-white
+        &:hover
+          background-color: $color-simdata-amber-dark1-5
 
   .float-buttons
     .button-holder
