--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -82,6 +82,7 @@ $color-simdata-amber-light1: #ffd56d
 $color-simdata-amber-light2: #ffecc0
 $color-simdata-amber-light3: #fff8e6
 $color-simdata-amber-dark1: #d49600
+$color-simdata-amber-dark1-5: #c28800
 $color-simdata-amber-dark2: #976B00
 $color-simdata-amber-dark3: #6d4d00
 $color-simdata-carrot-dark3: #6d2b00
