Add the theme colors
[#166685898]

--- a/src/components/main-content.sass
+++ b/src/components/main-content.sass
@@ -13,3 +13,6 @@
 
   &.organism
     background-color: $color-simdata-carrot-dark1
+
+  &.breeding
+    background-color: $color-simdata-brick-dark1
