--- a/src/components/spaces/breeding/breeding-container.sass
+++ b/src/components/spaces/breeding/breeding-container.sass
@@ -1,3 +1,25 @@
+@import "../../vars"
+
 .breeding-container
+  width: 100%
   display: grid
-  grid-template-columns: 200px 200px
+  grid-template-columns: [mother] 30% [center] 1fr [father] 30%
+  grid-template-rows: [top] auto [bottom] 1fr
+
+  div
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+
+  .parent
+    background-color: $color-simdata-brick-light3
+    border: 2px solid $color-simdata-brick-light1
+    border-radius: 20px
+    grid-row-start: top
+
+  .mother
+    grid-column-start: mother
+
+  .father
+    grid-column-start: father
