--- a/src/components/spaces/breeding/breeding-container.sass
+++ b/src/components/spaces/breeding/breeding-container.sass
@@ -13,9 +13,10 @@
     justify-content: center
 
   .parent
+    margin: 3px
     background-color: $color-simdata-brick-light3
     border: 2px solid $color-simdata-brick-light1
-    border-radius: 20px
+    border-radius: 10px
     grid-row-start: top
 
   .mother
@@ -23,3 +24,33 @@
 
   .father
     grid-column-start: father
+
+  .breed-button
+    grid-column-start: center
+    grid-row-start: top
+
+  .litter
+    grid-column-start: mother
+    grid-column-end: span 3
+    grid-row-start: bottom
+    height: 85px
+    margin: 3px
+    border: 2px solid black
+    border-radius: 10px
+    flex-direction: row
+    overflow: hidden
+
+
+  .button-holder
+    width: 120px
+    margin: 0 2px
+    border-radius: 13px
+    background-color: $color-simdata-brick-light1
+    color: $color-white
+    font-size: 15px
+    &:hover:not(.disabled):not(.active)
+      background-color: $color-simdata-brick
+    &:active:not(.disabled), &.active
+      background-color: $color-simdata-brick-dark1
+      &:hover
+        background-color: $color-simdata-brick-dark2
