--- a/src/components/spaces/breeding/chromosome.sass
+++ b/src/components/spaces/breeding/chromosome.sass
@@ -37,7 +37,7 @@ $border-width: 3px
           border: 1px solid
           border-color: inherit
 
-    .chromosome:nth-of-type(2)
+    .chromosome:nth-of-type(2),.chromosome.right
       .allele
         .line
           margin-left: 5px
