Add target-zoom styling on cell level, add mode

--- a/src/components/zoom-control.sass
+++ b/src/components/zoom-control.sass
@@ -23,6 +23,7 @@
       &.zoom-in
         margin-left: 0px
         border-radius: 0 $explore-button-right-radius $explore-button-right-radius 0
+        &.target
+          border-radius: 0 5px 5px 0
       .icon
-        height: 18px
         width: 18px
