Add zoom cursors and update active state

--- a/src/components/spaces/organisms/organelle-wrapper.sass
+++ b/src/components/spaces/organisms/organelle-wrapper.sass
@@ -20,6 +20,8 @@
     cursor: url('../../../assets/cell-zoom/measure-substance-cursor.png') 9 41, auto
   &.inspect
     cursor: url('../../../assets/cell-zoom/inspect-proteins-cursor.png') 6 5, auto
+  &.target-zoom
+    cursor: url('../../../assets/cell-zoom/target-zoom-cursor.png') 20 20, auto
 
   &.add-eumelanin-disabled
     cursor: url('../../../assets/cell-zoom/add-eumelanin-disabled-cursor.png') 9 41, auto
@@ -33,6 +35,8 @@
     cursor: url('../../../assets/cell-zoom/measure-substance-disabled-cursor.png') 9 41, auto
   &.inspect-disabled
     cursor: url('../../../assets/cell-zoom/inspect-proteins-disabled-cursor.png') 6 5, auto
+  &.target-zoom-disabled
+    cursor: url('../../../assets/cell-zoom/target-zoom-disabled-cursor.png') 20 20, auto
 
 .hover-location
     position: absolute
