--- a/src/components/spaces/organisms/manipulation-controls.sass
+++ b/src/components/spaces/organisms/manipulation-controls.sass
@@ -4,6 +4,7 @@
   display: flex
   justify-content: center
   align-items: center
+  min-width: 325px
 
   .substance-type-container
     border-style: solid
