--- a/src/components/app.sass
+++ b/src/components/app.sass
@@ -15,11 +15,13 @@
   &.authoring
     position: initial
 
+.outer-scale-wrapper
+  background-color: white
+
 .app-container
   display: flex
   flex-direction: column
-  width: 100%
-  height: 100%
+  transform-origin: 50% 0
 
 .nav-and-content-container
   display: flex
