Tweak other views to new aspect ratio

--- a/src/components/spaces/organisms/organisms-container.sass
+++ b/src/components/spaces/organisms/organisms-container.sass
@@ -1,6 +1,8 @@
 @import "../../vars"
 
 .organisms-container
+  height: 196px
+  overflow: hidden
 
   .cell-zoom-panel .model-wrapper
     top: -40px
